--- a/app/globals.css
+++ b/app/globals.css
@@ -92,3 +92,10 @@ s, i, em {
 .col-red {
     color: #C81623 !important;
 }
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  padding: 0 60px;
+  margin: 10px 0; 
+}
