--- a/app/globals.css
+++ b/app/globals.css
@@ -186,3 +186,25 @@ s, i, em {
   justify-content: center;
   margin: 120px 0 20px 0;
 }
+
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  text-align: center;
+}
+
+.footer > * {
+  width: 100%;
+}
+
+.footer > p {
+  color: rgb(131, 132, 133);
+  font-size: 18px;
+  font-weight: 300;
+}
+
+.footer > img {
+  margin: 15px 0;
+}
