--- a/app/globals.css
+++ b/app/globals.css
@@ -141,6 +141,13 @@ s, i, em {
   margin-right: 40px;
 }
 
+.ads-img2 {
+  width: 620px;
+  height: 640px;
+  margin-right: 30px;
+  margin-top: 40px;
+}
+
 .ads-title1 {
   color: #e41e2e;
   font-size: 40px;
@@ -148,6 +155,15 @@ s, i, em {
   line-height: 40px;
   margin-top: 80px;
 }
+
+
+.ads-title2 {
+  color: #e41e2e;
+  font-size: 26px;
+  font-weight: 450;
+  margin-top: 10px;
+}
+
 
 .ads p {
   color: rgb(131, 132, 133);
@@ -207,4 +223,20 @@ s, i, em {
 
 .footer > img {
   margin: 15px 0;
+}
+
+.banner2 {
+  display: flex;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  height: 320px;
+  background-image: url('../public/11.png');
+  font-weight: 300;
+  letter-spacing: 1px;
+  font-size: 47px;
+  color: #fff;
+  background-position: center !important;
+  background-repeat: no-repeat !important;
+  background-size: cover;
 }
